# pixctl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PIXELFORGE_PROGRESS_AUDIT.md  PROJECT_FINAL_AUDIT.md  README.md  RELEASE_READINESS_REPORT.md  SECURITY.md  UI_AUDIT_REPORT.md  app.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: ci.yml
docs/: HOWTO.md  REAL_ESRGAN_SETUP.md  TROUBLESHOOTING.md
docs/screenshots/: README.md
scripts/: smoke_pixctl_frontend.py
src/: config.py  image_ops.py  realesrgan_runner.py  ui.py  utils.py
tests/: conftest.py  test_image_ops.py  test_realesrgan_runner.py  test_utils.py
