[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pixctl"
version = "0.1.0"
description = "Local Real-ESRGAN UI with compression workflow"
requires-python = ">=3.9"
license = { text = "MIT" }

[[project.authors]]
name = "Alex Cezary Bachlej"
