[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pixctl"
version = "0.1.0"
description = "Local Real-ESRGAN UI with compression workflow"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "gradio>=4.0.0",
    "Pillow>=10.0.0",
]

[[project.authors]]
name = "Alex Cezary Bachlej"
